Bug 77381 - The spec renamed addTrack() to addTextTrack()
Summary: The spec renamed addTrack() to addTextTrack()
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 43668
  Show dependency treegraph
 
Reported: 2012-01-30 16:16 PST by Silvia Pfeiffer
Modified: 2012-01-31 08:44 PST (History)
4 users (show)

See Also:


Attachments
Patch (13.94 KB, patch)
2012-01-31 01:49 PST, Arko Saha
no flags Details | Formatted Diff | Diff
Updated patch (13.97 KB, patch)
2012-01-31 02:54 PST, Arko Saha
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Silvia Pfeiffer 2012-01-30 16:16:32 PST
The IDL of the tracks API in HTMLMediaElement has changed in the HTML spec:

===
third_party/WebKit/WebKitBuild/Release/DerivedSources/WebCore/WebCore/html/HTMLMediaElement.idl :

#if defined(ENABLE_VIDEO_TRACK) && ENABLE_VIDEO_TRACK
    [EnabledAtRuntime=webkitVideoTrack] TextTrack addTrack(in DOMString kind, in [Optional] DOMString label, in [Optional] DOMString language)
        raises (DOMException);
    readonly attribute [EnabledAtRuntime=webkitVideoTrack] TextTrackList textTracks;
#endif
===

===
http://www.whatwg.org/specs/web-apps/current-work/multipage/the-video-element.html#media-elements :

// tracks
  readonly attribute TextTrackList textTracks;
  TextTrack addTextTrack(DOMString kind, optional DOMString label, optional DOMString language);
===

Please rename the function from addTrack() to addTextTrack()
Comment 1 Arko Saha 2012-01-31 01:49:18 PST
Created attachment 124684 [details]
Patch

Incorporating spec change.
Comment 2 WebKit Review Bot 2012-01-31 01:52:03 PST
Attachment 124684 [details] did not pass style-queue:

Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9

Updating OpenSource
From git://git.webkit.org/WebKit
   c1d3a24..f16475a  master     -> origin/master
Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ...
Currently at 106344 = c1d3a24ee41e907f3a05d56935348677c33112a7
r106345 = f16475ae58a34ac80c6a00857d86913b818f1eea
Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc
First, rewinding head to replay your work on top of it...
Applying: Fix compilation errors on build-webkit --debug --no-workers on mac.
Using index info to reconstruct a base tree...
Falling back to patching base and 3-way merge...
Auto-merging LayoutTests/ChangeLog
CONFLICT (content): Merge conflict in LayoutTests/ChangeLog
Auto-merging LayoutTests/platform/qt/Skipped
CONFLICT (content): Merge conflict in LayoutTests/platform/qt/Skipped
Failed to merge in the changes.
Patch failed at 0001 Fix compilation errors on build-webkit --debug --no-workers on mac.

When you have resolved this problem run "git rebase --continue".
If you would prefer to skip this patch, instead run "git rebase --skip".
To restore the original branch and stop rebasing run "git rebase --abort".

rebase refs/remotes/origin/master: command returned error: 1

Died at Tools/Scripts/update-webkit line 164.


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 3 Arko Saha 2012-01-31 02:54:22 PST
Created attachment 124694 [details]
Updated patch

Resolved merge conflict.
Comment 4 WebKit Review Bot 2012-01-31 02:57:34 PST
Attachment 124694 [details] did not pass style-queue:

Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9

Updating OpenSource
First, rewinding head to replay your work on top of it...
Applying: Fix compilation errors on build-webkit --debug --no-workers on mac.
Using index info to reconstruct a base tree...
Falling back to patching base and 3-way merge...
Auto-merging LayoutTests/ChangeLog
CONFLICT (content): Merge conflict in LayoutTests/ChangeLog
Auto-merging LayoutTests/platform/qt/Skipped
CONFLICT (content): Merge conflict in LayoutTests/platform/qt/Skipped
Auto-merging Source/WebCore/ChangeLog
CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog
Failed to merge in the changes.
Patch failed at 0001 Fix compilation errors on build-webkit --debug --no-workers on mac.

When you have resolved this problem run "git rebase --continue".
If you would prefer to skip this patch, instead run "git rebase --skip".
To restore the original branch and stop rebasing run "git rebase --abort".

rebase refs/remotes/origin/master: command returned error: 1

Died at Tools/Scripts/update-webkit line 164.


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 5 Arko Saha 2012-01-31 04:03:50 PST
Looks like there is some problem with style-queue, its failing for all the patches.
Comment 6 WebKit Review Bot 2012-01-31 08:44:33 PST
Comment on attachment 124694 [details]
Updated patch

Clearing flags on attachment: 124694

Committed r106361: <http://trac.webkit.org/changeset/106361>
Comment 7 WebKit Review Bot 2012-01-31 08:44:37 PST
All reviewed patches have been landed.  Closing bug.