The spec renamed addTrack() to addTextTrack(). https://bugs.webkit.org/show_bug.cgi?id=77381

Patch by Arko Saha <arko@motorola.com> on 2012-01-31
Reviewed by Eric Carlson.

Renamed addTrack() to addTextTrack().
Spec: http://www.whatwg.org/specs/web-apps/current-work/multipage/the-video-element.html#media-elements

Source/WebCore:

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::addTextTrack):
* html/HTMLMediaElement.h:
(WebCore::HTMLMediaElement::addTextTrack):
* html/HTMLMediaElement.idl:

LayoutTests:

* media/track/track-add-track-expected.txt:
* media/track/track-add-track.html:
* media/track/track-addtrack-kind-expected.txt:
* media/track/track-addtrack-kind.html:
* media/track/track-text-track-destructor-crash.html:
* media/track/track-texttracks-expected.txt:
* media/track/track-texttracks.html:
* platform/gtk/fast/dom/Window/window-properties-expected.txt:
* platform/mac/fast/dom/Window/window-properties-expected.txt:

Canonical link: https://commits.webkit.org/94318@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106361 268f45cc-cd09-0410-ab3c-d52691b4dbfc